fix: Update Docker configuration for production readiness
Dockerfile:
- Added environment variables (PORT, HOST, FILE_SERVER_PORT)
- Added PYTHONUNBUFFERED for real-time logging
- Added EXPOSE ports declaration

docker-compose.yml:
- Fixed port mapping: 9081→8001 (file server)
- Fixed MCP port: 9080→9080 (was 8000)
- Added environment variables
- Added output volume mount

.dockerignore:
- Expanded exclusions for cleaner builds
- Exclude logs, cache, virtual envs, IDE files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,12 @@ services:
   exel-mcp:
     build: .
     ports:
-      - "9080:8000"  # MCP server
-      - "9081:8001"  # File server
+      - "9080:9080"  # MCP server
+      - "8001:8001"  # File server
+    environment:
+      - PORT=9080
+      - HOST=0.0.0.0
+      - FILE_SERVER_PORT=8001
     volumes:
       - .:/app
+      - ./output:/app/output
